# neodlp

./: .gitattributes  .gitignore  .lfsconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  com.neosubhamoy.neodlp.desktop  com.neosubhamoy.neodlp.metainfo.xml  components.json  index.html  makeFilesExecutable.js  package-lock.json  package.json  tailwind.config.js  updateYtDlpBinary.js  vite.config.ts
.gitea/workflows/: publish-to-aur.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_result.md
.github/workflows/: publish-to-aur.yml  publish-to-winget.yml  release.yml
scripts/: chmod.js  download-bins.js  update-yt-dlp.js
src/: App.tsx  config.ts  index.css  main.tsx  routes.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux-aarch64.conf.json  tauri.linux-flatpak.conf.json  tauri.linux-x86_64.conf.json  tauri.linux.conf.json  tauri.macos-aarch64.conf.json  tauri.macos-x86_64.conf.json  tauri.windows-aarch64.conf.json  tauri.windows-x86_64.conf.json  tauri.windows.conf.json
src-tauri/binaries/: aria2c-aarch64-apple-darwin  aria2c-aarch64-unknown-linux-gnu  aria2c-x86_64-apple-darwin  aria2c-x86_64-unknown-linux-gnu  deno-aarch64-apple-darwin  deno-aarch64-unknown-linux-gnu  deno-x86_64-apple-darwin  deno-x86_64-unknown-linux-gnu  ffmpeg-aarch64-apple-darwin  ffmpeg-aarch64-unknown-linux-gnu  ffmpeg-x86_64-unknown-linux-gnu  ffprobe-aarch64-apple-darwin  ffprobe-aarch64-unknown-linux-gnu  ffprobe-x86_64-unknown-linux-gnu  yt-dlp-aarch64-apple-darwin  yt-dlp-aarch64-unknown-linux-gnu  yt-dlp-x86_64-apple-darwin  yt-dlp-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/installer/windows/nsis/: hooks.nsi
src-tauri/installer/windows/wix/: reg-fragment.wxs
src-tauri/msghost/: Cargo.toml
src-tauri/msghost/src/: config.rs  main.rs
src-tauri/resources/autostart/linux/: autostart.desktop
src-tauri/resources/autostart/macos/: autostart.plist
src-tauri/resources/binaries/: ffmpeg-x86_64-apple-darwin
src-tauri/resources/msghost-manifest/linux/: chrome.json  firefox.json
src-tauri/resources/msghost-manifest/macos/: chrome.json  firefox.json
src-tauri/resources/msghost-manifest/windows/: chrome.json  firefox.json
src-tauri/resources/plugins/yt-dlp-plugins/bgutil-ytdlp-pot-provider/yt_dlp_plugins/extractor/: getpot_bgutil.py
src-tauri/src/: config.rs  lib.rs  main.rs  migrations.rs
src/components/: footer.tsx  heading.tsx  navbar.tsx  sidebar.tsx  titlebar.tsx
src/components/custom/: formatSelectionGroup.tsx  formatToggleGroup.tsx  indeterminateProgress.tsx  numberInput.tsx  paginationBar.tsx  playlistSelectionGroup.tsx  playlistToggleGroup.tsx  proxyImage.tsx  slidingButton.tsx
src/components/icons/: close.tsx  india.tsx  maximize.tsx  minimize.tsx  neodlp.tsx  unmaximize.tsx
src/components/pages/downloader/: bottomBar.tsx  playlistDownloader.tsx  videoDownloader.tsx
src/components/pages/settings/: applicationSettings.tsx  extensionSettings.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  chart.tsx  checkbox.tsx  dialog.tsx  form.tsx  radio-group.tsx  sidebar.tsx  sonner.tsx
src/helpers/: use-app-updater.ts  use-downloader.ts  use-kvpairs.ts  use-linux-registerer.ts  use-logger.ts  use-macos-registerer.ts  use-pot-server.ts  use-settings.ts  use-ytdlp-updater.ts
src/pages/: downloader.tsx  extension.tsx  library.tsx  settings.tsx
src/pages/layout/: root.tsx
src/providers/: appContextProvider.tsx  tanstackProvider.tsx  themeProvider.tsx
src/services/: database.ts  mutations.ts  queries.ts  store.ts
src/types/: download.ts  kvStore.ts  logs.ts  playlist.ts  route.ts  settings.ts  store.ts  video.ts  websocket.ts
